--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <html>
-
-<body>
-    <h1> Lupole </h1>
-</body>
-
+  <body>
+    <h3>Amazon Shopping Assistant</h3>
+    <div id="price">
+      <script type="module" src="popup.js"></script>
+    </div>
+  </body>
 </html>
