Clean up manifest and others

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <html>
   <body>
-    <h3>Amazon Shopping Assistant</h3>
-    <div id="price">
-      <script type="module" src="popup.js"></script>
+    <h3>Lupole</h3>
+    <div id="pp">
+      <script src="popup.js"></script>
     </div>
   </body>
 </html>
